--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
    <title>Travlog</title>
 </head>
 <body>
+
+   <div class="preloader" id="preloader">
+      <div class="loadingio-spinner-ellipsis-4u2bbxngdv">
+         <div class="ldio-uqmmxyvgo6">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+         </div>
+      </div>
+   </div>
+
    <header class="header" id="header">
       <div class="container">
          <div class="header-nav">
@@ -88,11 +101,11 @@
       <section class="section">
          <div class="container">
             <div class="brands">
-               <img class="brands__item" src="assets/images/brands/tripadvisor.png" alt="">
-               <img class="brands__item" src="assets/images/brands/expadia.png" alt="">
-               <img class="brands__item" src="assets/images/brands/booking.png" alt="">
-               <img class="brands__item" src="assets/images/brands/airbnb.png" alt="">
-               <img class="brands__item" src="assets/images/brands/orbitz.png" alt="">
+               <img class="brands__item wow animate__animated animate__fadeInUp" src="assets/images/brands/tripadvisor.png" alt="">
+               <img data-wow-delay=".3s" class="brands__item wow animate__animated animate__fadeInUp" src="assets/images/brands/expadia.png" alt="">
+               <img data-wow-delay=".5s" class="brands__item wow animate__animated animate__fadeInUp" src="assets/images/brands/booking.png" alt="">
+               <img data-wow-delay=".6s" class="brands__item wow animate__animated animate__fadeInUp" src="assets/images/brands/airbnb.png" alt="">
+               <img data-wow-delay=".8s" class="brands__item wow animate__animated animate__fadeInUp" src="assets/images/brands/orbitz.png" alt="">
             </div>
          </div>
       </section>
@@ -236,19 +249,19 @@
                      from 45 BC.
                   </p>
                   <div class="travel-point__flex">
-                     <div class="travel-point__flex-item">
+                     <div class="travel-point__flex-item wow animate__animated animate__fadeIn">
                         <h4 class="travel-point__num">500+</h4>
                         <p>Holiday Package</p>
                      </div>
-                     <div class="travel-point__flex-item">
+                     <div data-wow-delay=".3s" class="travel-point__flex-item wow animate__animated animate__fadeIn">
                         <h4 class="travel-point__num">100</h4>
                         <p>Luxury Hotel</p>
                      </div>
-                     <div class="travel-point__flex-item">
+                     <div data-wow-delay=".3s" class="travel-point__flex-item wow animate__animated animate__fadeIn">
                         <h4 class="travel-point__num">7</h4>
                         <p>Premium Airlines</p>
                      </div>
-                     <div class="travel-point__flex-item">
+                     <div data-wow-delay=".5s" class="travel-point__flex-item wow animate__animated animate__fadeIn">
                         <h4 class="travel-point__num">2k+</h4>
                         <p>Happy Customer</p>
                      </div>
